--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="single">
         <item
@@ -18,10 +19,13 @@
             android:id="@+id/nav_trash"
             android:icon="@android:drawable/ic_menu_delete"
             android:title="Trash" />
+
         <item
-            android:id="@+id/nav_settings"
-            android:icon="@android:drawable/ic_menu_preferences"
-            android:title="Settings" />
+            android:id="@+id/nav_theme"
+            android:icon="@android:drawable/ic_menu_gallery"
+            android:title="Theme"
+            app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />
+
         <item
             android:id="@+id/nav_about"
             android:icon="@android:drawable/ic_dialog_info"
