--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,7 +10,7 @@
         <item
             android:id="@+id/nav_new_note"
             android:icon="@android:drawable/ic_input_add"
-            android:title="New Note" />
+            android:title="New Note/Canvas" />
         <item
             android:id="@+id/nav_favorites"
             android:icon="@android:drawable/ic_menu_compass"
